# MQuAKE-Remastered

./: .gitignore  LICENSE  README.md  data_utils.py  edit_cases.py  pyproject.toml  requirements.txt
config/eval_config/CF-3k/: 1000.json  3000.json
config/eval_config/CF-3k-v2/: 1000.json
config/eval_config/CF-6334/: 1000.json
config/pipeline_config/gwalk/: Meta-Llama-3-8B.json  vicuna-7b-v1.5.json
config/pipeline_config/mello/: Meta-Llama-3-8B.json  Qwen2.5-7B-Instruct.json  vicuna-7b-v1.5.json
configs/: global_setting.py
configs/eval_config/mquake_remastered/: CF-3k_1000.json
configs/management_config/: default.json
configs/pipeline_config/Llama-2-7b-hf/: gwalk.json  mello.json
configs/pipeline_config/Mistral-7B-Instruct-v0.2/: gwalk.json  mello.json
data/mquake_remastered/prompts/: extract_entity.txt  fill_out_ga_w_blank2.txt  relation2subq_prompt2.txt  subq_breakdown.txt
eval/: eval_utils.py  mquake.py  utils.py
eval/mquake_remastered/: main.py  mquake_dataset.py  mquake_utils.py
pipeline/: eval_loop.py  eval_mquake_remastered.py  inference.py  inference_mquake.py  main.py  main_utils.py  pipeline_utils.py
pipeline/gwalk/: eval.py  eval_loop.py
pipeline/mello/: eval.py  eval_loop.py
prompts/: MeLLo-prompt-baseline.txt  MeLLo-prompt.txt
scripts/CF-3k-v2/gwalk/: Meta-Llama-3-8B.sh  vicuna-7b.sh
scripts/CF-3k-v2/mello/: Meta-Llama-3-8B.sh  qwen-7b.sh  vicuna-7b.sh
scripts/CF-3k/gwalk/: Meta-Llama-3-8B.sh
scripts/CF-3k/mello/: Meta-Llama-3-8B.sh
scripts/CF-6334/gwalk/: Meta-Llama-3-8B.sh
utils/: config_utils.py  logger_utils.py
(+5 files in other folders)
