[project]
name = "mquake-remastered"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "accelerate",
    "datasets",
    "huggingface-hub",
    "numpy",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
